<resources>
    <string name="app_name">记账易</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="lauch_string1">记账易</string>
    <string name="lauch_string2">记清每一分钱的去处</string>

    <!--左侧菜单 上方名称-->
    <string name="menu_home">首页</string>
    <string name="menu_sync">同步</string>
    <string name="menu_all_bill">账单总览</string>
    <string name="menu_search">账单搜索</string>
    <string name="menu_analysis">账单分析</string>
    <string name="menu_group_name">其他</string>
    <string name="menu_give_idea">意见反馈</string>
    <string name="menu_about_us">关于我们</string>
    <string name="menu_checkForUpdate">检查更新</string>
    <string name="menu_setting">设置</string>

    <!--通用-->
    <string name="MoneyIn">收入</string>
    <string name="MoneyOut">支出</string>
    <string name="homeMoneyDefault">---</string>

    <!--添加账单-->
    <string name="addBill">添加账单</string>
    <string name="addBillMoneyNull">请输入账单金额</string>
    <string name="addBillMoneyHint">请输入金额</string>
    <string name="addBillRemarkHint">添加备注</string>
    <string name="addBillConfirm">确定</string>
    <!--查看账单-->
    <string name="modifyBill">修改</string>
    <string name="lookBill">账单详情</string>
    <string name="lookBillDelete">删除</string>

    <!--修改账单-->
    <string name="modifyBillActivity">修改账单</string>

    <!--删除账单-->
    <string name="deleteBillTitle">确认删除</string>
    <string name="deleteBillMessage">删除后无法恢复,确定删除?</string>
    <string name="deleteBillNegaBtm">取消</string>
    <string name="deleteBillPosBtm">确定删除</string>
    <string name="deleteBillFailed">删除失败</string>
    <string name="deleteBillSuccess">删除成功</string>

    <!--登陆/注册/找回密码页面/-->
    <string name="userNameHint">请输入用户名</string>
    <string name="loginLogin">登陆</string>
    <string name="userNameNull">用户名不能为空</string>
    <string name="passwordNull">密码不能为空</string>
    <string name="loginNetworkFalse">网络未连接,请连接网络</string>
    <string name="loginFailed">登陆失败</string>
    <string name="login">登陆</string>
    <string name="loginFindPassword"><![CDATA[找回密码 >]]></string>
    <string name="retrieve_password">重置密码</string>
    <string name="retrieveUserNameHint">请输入邮箱</string>
    <string name="emailIncorrent">请输入正确的邮箱</string>
    <string name="passwordTooShort">请输入至少6位密码</string>
    <string name="register">注册</string>
    <string name="passwordNotSame">两次密码不一致</string>
    <string name="sync_hint">您可将数据同步至服务器,以便在新的设备上使用这些数据.</string>

    <!--同步页面-->
    <string name="sync_last">上次同步时间</string>
    <string name="sync_update">上传数据</string>
    <string name="sync_downland">下载数据</string>
    <string name="sync2csv">导出到CSV文件</string>
    <string name="csv2t">导入CSV文件</string>
    <string name="updateSuccess">上传成功</string>
    <string name="updateFailed">上传失败</string>
    <string name="getDatasFailed">数据下载失败</string>
    <string name="getDatasSuccess">数据下载成功</string>
    <!--意见反馈-->
    <string name="menu_idea_version">版本:</string>
    <string name="menu_idea_aboutus_edt">请输入您的宝贵意见及建议</string>
    <string name="menu_idea_aboutus_edt_phone">请输入您的联系方式</string>
    <!--关于我们-->
    <string name="aboutUsTextTop">我们的联系方式</string>
    <string name="aboutUseEmail">邮箱:liutanrong0425@163.com</string>
    <string name="aboutUsWechat">微信:www_12306com</string>
    <string name="aboutUsWeibo">新浪微博:@Ry6hn</string>
    <string name="settingPatternHint">手势密码</string>
</resources>
