<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <TextView
        android:text="@string/sync_hint"
        android:layout_margin="20px"
        android:textSize="30px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/sync_last"
        android:layout_margin="20px"
        android:layout_marginTop="30px"
        android:textSize="35px"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/sync_lastUpdateTime"
        android:text="2016.1.22 14:59"
        android:layout_margin="20px"
        android:layout_marginTop="30px"
        android:textSize="50px"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/sync_update"
        android:text="@string/sync_update"
        android:layout_marginTop="50px"
        android:layout_marginLeft="50px"
        android:layout_marginRight="50px"
        android:textColor="@drawable/selector_btn_text"
        android:background="@drawable/selector_btn_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/sync_downland"
        android:text="@string/sync_downland"
        android:layout_marginTop="50px"
        android:layout_marginLeft="50px"
        android:layout_marginRight="50px"
        android:textColor="@drawable/selector_btn_text"
        android:background="@drawable/selector_btn_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/sync2csv"
        android:text="@string/sync2csv"
        android:layout_marginTop="50px"
        android:layout_marginLeft="50px"
        android:layout_marginRight="50px"
        android:textColor="@drawable/selector_btn_text"
        android:background="@drawable/selector_btn_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/csv2t"
        android:text="@string/csv2t"
        android:layout_marginTop="50px"
        android:layout_marginLeft="50px"
        android:layout_marginRight="50px"
        android:textColor="@drawable/selector_btn_text"
        android:background="@drawable/selector_btn_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
