<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <include android:id="@+id/title" layout="@layout/activity_title"/>
    <ScrollView
        android:layout_below="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/adsasdda"
                android:layout_marginTop="50px"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/icon"
                android:layout_width="200px"
                android:layout_height="200px" />
            <TextView
                android:text="@string/menu_idea_version"
                android:textSize="20sp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_horizontal"
                android:id="@+id/giveIdeaVersionName"
                android:layout_marginTop="20px"
                android:layout_below="@+id/adsasdda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_marginTop="20px"
                android:id="@+id/giveIdeaText"
                android:layout_width="match_parent"
                android:layout_height="300px"
                android:hint="@string/menu_idea_aboutus_edt"
                android:gravity="start"
                android:background="#ffffff"
                android:layout_marginLeft="50px"
                android:layout_marginRight="50px"
                android:layout_below="@+id/giveIdeaVersionName"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <EditText
                android:layout_marginTop="20px"
                android:id="@+id/giveIdeaPhone"
                android:layout_width="match_parent"
                android:layout_height="70px"
                android:hint="@string/menu_idea_aboutus_edt_phone"
                android:gravity="center_vertical|start"
                android:background="#ffffff"
                android:layout_marginLeft="50px"
                android:layout_marginRight="50px"
                android:layout_below="@+id/giveIdeaText"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <Button
                android:id="@+id/giveIdeaConfirm"
                android:text="提交"
                android:layout_below="@+id/giveIdeaPhone"
                android:layout_marginTop="50px"
                android:layout_marginLeft="20px"
                android:layout_marginRight="20px"
                android:layout_marginBottom="50px"
                android:textColor="@drawable/selector_btn_text"
                android:background="@drawable/selector_btn_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>