<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/home_lin"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="150px">
        <RelativeLayout
            android:background="@drawable/border"
            android:layout_weight="3"
            android:paddingLeft="5dp"
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/money_out_t"
                android:text="@string/MoneyOut"
                android:textSize="35px"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
            <TextView
                android:id="@+id/home_money_out"
                android:layout_marginTop="10px"
                android:gravity="center_horizontal"
                android:layout_below="@+id/money_out_t"
                android:drawableLeft="@drawable/iconfont_renminbi20"
                android:text="@string/homeMoneyDefault"
                android:singleLine="true"
                android:maxLength="6"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:focusableInTouchMode="true"
                android:focusable="true"
                android:textSize="50px"
                android:textColor="@color/word_orgin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="2"
            android:gravity="center_horizontal|center_vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/home_date"
                android:background="@drawable/border"
                android:gravity="center_horizontal|center_vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp" />
            <LinearLayout
                android:background="@drawable/border"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp">
                <TextView
                    android:id="@+id/home_money"
                    android:text="@string/homeMoneyDefault"
                    android:singleLine="true"
                    android:maxLength="7"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:focusableInTouchMode="true"
                    android:focusable="true"
                    android:drawableLeft="@drawable/iconfont_renminbi15"
                    android:gravity="center_horizontal|center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </LinearLayout>

        </LinearLayout>
        <RelativeLayout
            android:background="@drawable/border"
            android:layout_weight="3"
            android:paddingLeft="5dp"
            android:gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/money_in_t"
                android:text="@string/MoneyIn"
                android:textSize="35px"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
            <TextView
                android:id="@+id/home_money_in"
                android:layout_marginTop="10px"
                android:gravity="center_horizontal"
                android:layout_below="@+id/money_in_t"
                android:drawableLeft="@drawable/iconfont_renminbi20"
                android:text="@string/homeMoneyDefault"
                android:singleLine="true"
                android:maxLength="6"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:focusableInTouchMode="true"
                android:focusable="true"
                android:textSize="50px"
                android:textColor="@color/word_orgin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </LinearLayout>
    <ListView
        android:layout_below="@+id/home_lin"
        android:id="@+id/home_listview"
        android:layout_width="match_parent"
        android:layout_height="874px">

    </ListView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchorGravity="right"
        android:src="@android:drawable/ic_input_add"
        android:layout_marginRight="20px"
        android:layout_marginBottom="20px"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
